examples/positive/L1/duplicate_parens.ob
MODULE DuplicateParens;

VAR x, y: INTEGER;

BEGIN
  x := 3;
  y := 4;
  x := (x * y);
  y := ((x DIV y) * 32);
  x := ((((x + y))));
  x := 1 + 2 * 3;

END DuplicateParens.
