examples/negative/type_errors/L1/10_mult_int_bool.ob
MODULE MultIntBool;

VAR i: INTEGER;
    b: BOOLEAN;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  i := 3;
  b := TRUE;
  i := i * b; ok := TRUE;
END MultIntBool.
